# Snake

./: .gitignore  CMakeLists.txt
src/: main.c  main.cpp  state.h
